# 2-WayFSOCommunication

Budget Summary/: Project Budget.xlsx
Code/: readme.md
Code/Combined_Final/Rx_Device/: CMakeLists.txt  readme.md
Code/Combined_Final/Tx_Host/: CMakeLists.txt  readme.md
Code/Combined_Final/Tx_Host/main/: CMakeLists.txt  idf_component.yml  main.c
Code/Early/Rx/: CMakeLists.txt  README_RX.md  sdkconfig  sdkconfig.old
Code/Early_test/Rx/: sdkconfig  sdkconfig.old
Code/Early_test/Tx/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
Code/HID code/hid/: sdkconfig  sdkconfig.old
Code/HID_Code/Rx_code_Device/: readme.md
Code/HID_Code/Tx_code_Device/: readme.md
Code/HID_Tx_Rx/Rx_code/: CMakeLists.txt
Code/HID_Tx_Rx/Tx_code/: CMakeLists.txt  readme.md
Code/MSC code/msc/: sdkconfig
Code/MSC_Code/msc_Device/: sdkconfig
Code/MSC_Tx_Rx/: readme.md
Code/MSC_Tx_Rx/Rx/: CMakeLists.txt  readme.md
Code/MSC_Tx_Rx/Tx/: CMakeLists.txt  readme.md
Code/MSC_Tx_Rx/Tx/main/: CMakeLists.txt  main.c
Code/Rx/: README_RX.md
Code/Tx/: README.md  sdkconfig  sdkconfig.old
Enclosure CAD/Final/: Bottom.stl  Final design 2025 project v9.f3d  Top.stl
Enclosure CAD/Version 1.0/: Single board v1.f3d
PCB Files/Test PCB version 2.0/: BOM_SMT-design-Project-Test-Board-2025_2025-10-28.csv  PickAndPlace_NEW_PCB_2025-10-28.csv
PCB Files/Test PCB version 3.0/: BOM_END-PCB-Design-Project-2025_2025-10-28.csv  PickAndPlace_LAST-PCB_2025-10-28.csv
Simulations/: Final OPA858 Reciver.TSC  Final Transmitter.TSC  Regulator.asc  Transmitter v1.asc
(+38 files in other folders)
